# Fire-Engine-Framework

./: .gitignore  01_Ignition_Module.py  02_Burning_Conditions_Module.py  03_fire_engine.py  03_fire_engine_try.py  0_Create_fire_model_from_template.py  0_Create_fire_model_no_template.py  Build_FBP_Grid.py  Overview.txt  README.md  ROS_Math.py  ROS_Spread.py  cloud_fetcher.py  fire_fecther.py  ignacio.yaml  ignacio_example.yaml  pyproject.toml  run_ignacio.py  run_workflow.py  test_advanced_physics.py  test_atmosphere_3d.py  test_jax_core.py  test_physics_modules.py
Sources/: Readme.md
Test_Data/: Overview.txt
Test_Data/Bow-at-Banff/: About.txt  Alberta_National_Parks_BowBox.dbf  Alberta_National_Parks_BowBox.shp  Alberta_National_Parks_BowBox.shx  Banff_Station.dbf  Banff_Station.qmd  Banff_Station.shp  Banff_Station.shx  Bow_Box.dbf  Bow_Box.shp  Bow_Box.shx  Bow_FBP_out.csv  Bow_FWI_out.csv  Bow_at_Banff_distributed_HRUs_GRUs.dbf  Bow_at_Banff_distributed_HRUs_GRUs.shp  Bow_at_Banff_distributed_HRUs_GRUs.shx  Bow_at_Banff_lumped_riverBasins_lumped.dbf  Bow_at_Banff_lumped_riverBasins_lumped.shp  Bow_at_Banff_lumped_riverBasins_lumped.shx  Ignition_A.shp  Ignition_A.shx  Large_Fires_Point_BowBox.dbf  (+2 more)
data/: Banff_CS-20140201-20140531.csv  Banff_CS_sample.csv  Ignition_A.dbf  Ignition_A.kml  OBrienCreekFire_2014.dbf  OBrienCreekFire_2014.qmd  OBrienCreekFire_2014.shp  OBrienCreekFire_2014.shx  fuels.tif.aux.xml  stations.csv
examples/: calibration_demo.py  simple_calibration.py
ignacio/: __init__.py  cli.py  config.py  config_unified.py  fbp.py  fire_models.py  fwi.py  ignition.py  io.py  jax_integration.py  model_decisions.py  parameters.py  preprocessing.py  simulation.py  spread.py  station_parser.py  terrain.py  vector_topology.py  visualization.py  weather.py
ignacio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
output/: all_perimeters.dbf  all_perimeters.shp  fire_weather_list.csv  ignitions.dbf  ignitions.shp  ignitions.shx  simulation_summary.csv
tests/: __init__.py  test_bow_banff_comparison.py  test_fbp.py  test_jax_core.py  test_spread.py  test_terrain.py
(+27 files in other folders)
